fixed chat, now displays name and profile img accordingly, and hyperlink function works and fixed the overflow of float element

--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -128,6 +128,7 @@
                         z-index: 1;
                     }
                     .message-container{
+                        --length:2.6rem;
                         display:flex;
                         flex-direction: row-reverse;
                         justify-content:flex-end;
@@ -142,25 +143,38 @@
                             font-size:0.8rem;
                         }
                         
-                        .message-wrapper{
+                        .message-content{
                             max-width: 70%;
                             width:max-content;
-                            padding:10px;
+                            padding:5px;
                             padding-top:0;
-                            
-                            .message-text{
+                            &.no-prof-img{
+                                margin:unset;
+                                margin-left:var(--length);
+                            }
+                            .message-wrapper{
+                                display: flex;
+                                align-items: flex-end;
                                 background-color:grey;
-                                padding:10px;
-                                color:white;
-                                font-size:1.2rem;
                                 border-radius:0.2rem;
-    
-                                overflow-wrap:break-word;
-                                span{
+                                padding:10px;
+                                overflow: hidden;
+                                padding:10px;
+                                .time{
                                     float:right;
                                     padding-left:5px;
                                     sub{
+                                        color: white;
                                         font-size:0.7rem;
+                                    }
+                                }
+                                .message-text{
+                                    color:white;
+                                    font-size:1.2rem;
+                                    word-break:break-all;
+                                    overflow-wrap:break-word;;
+                                    .hyperlink{
+                                        color:inherit;
                                     }
                                 }
                             }
@@ -172,10 +186,13 @@
                                 margin-right:initial;
                                 margin-left:auto;
                             }
+                            .no-prof-img{
+                                margin: unset;
+                                margin-right:var(--length);
+                            }
                         }
                         .alt-pic,
                         .profile-pic{
-                            --length:2.6em;
                             width:var(--length);
                             height:var(--length);
                             border-radius:50%;
@@ -213,6 +230,12 @@
                         overflow-y: scroll;
                         overflow-x:hidden;
                         outline:none;
+                        & *{
+                            background:none !important;
+                            color:inherit !important;
+                            text-decoration: none !important;
+                            font-size: inherit !important;
+                        }
                     }
                     .chat-input-placeholder{
                         position:absolute;
